miniextendr-macros/tests/ui/derive_dataframe_align_on_struct.stderr
error: `align` is only supported on enums, not structs
 --> tests/ui/derive_dataframe_align_on_struct.rs:7:8
  |
7 | struct Point {
  |        ^^^^^
