miniextendr-macros/tests/ui/derive_dataframe_align_on_struct.rs
//! Test: #[dataframe(align)] is only for enums, not structs.

use miniextendr_macros::DataFrameRow;

#[derive(DataFrameRow)]
#[dataframe(align)]
struct Point {
    x: f64,
    y: f64,
}

fn main() {}
